Tighten up some uses of scope
The engine should always use its scope if possible (it is tied to a
connection). However, the context should avoid it (it will almost never
be closed).
Also add a sync in the context's openSSLCallbackVerify, just in case it
is actually used.